# Openspy-Core

./: CMakeLists.txt  Database.sql  Makefile  ReadMe.md  create_user  import_game_data_to_db
cmake/: FindGeoIP.cmake
common/: mysql_helpers.cpp  mysql_helpers.h
keyserver/: CMakeLists.txt  Makefile
legacyms/: CMakeLists.txt  Client.cpp  Makefile
legacystats/: CMakeLists.txt  Makefile
legacystatsprocessor/: CMakeLists.txt  Makefile
natneg/: CMakeLists.txt  Makefile
old_db/: Matrix.sql
openspy/: Makefile  main.cpp  openspy  openspy.cfg
papers/: gamedata_all.txt  gamedata_min.txt
peerchat/: CMakeLists.txt  Makefile  client.cpp  structs.h
playersearch/: CMakeLists.txt  Makefile
playerspy/: CMakeLists.txt  Client.cpp  Makefile
qr/: CMakeLists.txt  Makefile
serverbrowsing/: CMakeLists.txt  Client.cpp  Makefile  handler.cpp  structs.h
udf/: CMakeLists.txt
udf/Matrix/: procs.sql
webroot/servserv/: MOTD.txt  config.txt
webroot/servserv/cnc3/: config.txt  drivers.txt
